# chdman-standalone

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  DESIGN.md  LICENSE  PRODUCT.md  README.md
.impeccable/: design.json
app/: Info.plist  project.yml
app/CHDMate.xcodeproj/: project.pbxproj
app/Hunky.xcodeproj/: project.pbxproj
app/Hunky.xcodeproj/xcshareddata/xcschemes/: Hunky.xcscheme
app/Sources/CHDMate/: CHDMateApp.swift
app/Sources/CHDMate/Core/: QueueController.swift
app/Sources/CHDMate/Views/: ContentView.swift
app/Sources/Hunky/: HunkyApp.swift  HunkyCommands.swift
app/Sources/Hunky/Core/: AppIntegration.swift  AppSettings.swift  AuditStyle.swift  CRC32.swift  ChdmanRunner.swift  CueSheet.swift  DiscAudit.swift  DiscAuditIssue.swift  DiscInspector.swift  FileItem.swift  QueueController.swift  QueuePresentation.swift  Redump.swift
app/Sources/Hunky/Views/: ConsoleArt.swift  ContentView.swift  DropZone.swift  HunkyTheme.swift  QueueRow.swift  SettingsView.swift  WindowChrome.swift
app/Sources/Hunky/Views/Helpers/: FilePicker.swift  StatusBanner.swift
app/Sources/Hunky/Views/Panels/: DiscBayPanel.swift  QueueDeckPanel.swift  QueueSearchBar.swift
app/Sources/Hunky/Views/Settings/: SettingsView.swift
app/Sources/Hunky/Views/Sheets/: CompletedRunChip.swift  PreflightConfirmationSheet.swift  TextOutputSheet.swift
app/Tests/HunkyTests/: CueSheetTests.swift  DiscAuditTests.swift  QueueControllerTests.swift  RedumpAuditTests.swift
scripts/: fetch_sources.sh
